--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                 </div>
                 <div class="video-box" id="doctorVideoBox" style="display: none;">
                     <img src="path/to/doctor-phone-image.jpg" alt="Doctor on Phone" id="remoteImage" class="doctor-image">
-                    <p>Doctor: +1234567890</p>
+                    <p>Doctor: charles</p>
                 </div>
             </div>
             <div class="video-controls">
