--- a/services.html
+++ b/services.html
@@ -273,7 +273,7 @@
 
             
             const responses = {
-                'appointment': 'To book an appointment, you can use our online booking form above or call us at +0909090990.',
+                'appointment': 'To book an appointment, you can use our online booking form above .',
                 'hours': 'Our main clinic is open Monday-Friday 8:00 AM - 8:00 PM, Saturday 9:00 AM - 5:00 PM. Emergency services are available 24/7.',
                 'insurance': 'We accept most major insurance plans. You can check your coverage using the button above.',
                 'emergency': 'For emergencies, please call 099 or visit our emergency department which is open 24/7.',
